--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,21 @@
+@font-face{
+    font-family: "Ubuntu";
+    src: url("../src/assets/fonts/Ubuntu-Regular.ttf") format("truetype");
+    font-weight: 100 900;
+    font-style:normal; 
+}
+
+@font-face{
+    font-family: "Ubuntu";
+    src: url("../src/assets/fonts/Ubuntu-Italic.ttf") format("truetype");
+    font-weight: 100 900;
+    font-style: italic;
+}
+
 @import "tailwindcss";
+
+@theme{
+    --font-sans: "Ubuntu", "sans-serif";
+    --color-nav-bg: #555655;
+    --color-nav-text: #313131;
+}
